# spotify-etl

./: .cache  .env.example  .gitignore  README.md  airflow-guide  pyproject.toml  requirements.txt
spotify_etl/: __init__.py  db.py  extract.py  load.py  main.py
spotify_etl/dags/: etl.py  spotify_dag.py
